# config_management

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: publishing.md
packaging/homebrew/: cfgsync.rb.template
packaging/launchd/: com.example.cfgsync.push.plist
src/cfgsync/: __init__.py  cli.py  core.py  fs.py  models.py  s3_backend.py
tests/: test_core.py
