[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cfgsync"
version = "0.1.0"
description = "Unified dotfile and application config manager with optional Cloudflare R2/S3 sync."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Alan Zeng" }]
keywords = ["dotfiles", "config", "cloudflare-r2", "s3", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/alanzeng423/config_management"
Repository = "https://github.com/alanzeng423/config_management"
Issues = "https://github.com/alanzeng423/config_management/issues"

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[project.scripts]
cfgsync = "cfgsync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cfgsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
